# jsonrpc-tcp-srv

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  check-code-format.sh  docker-compose.build.yml  docker-compose.yml  fix-code-format.sh  start-xmpp-chatbot.sh
helper-scripts/: clean-comments.sh  count-tokens.sh
lib/: CMakeLists.txt
lib/lib-display/: CMakeLists.txt
lib/lib-display/include/: Adafruit_GFX.h  ArduiPi_OLED.h  ArduiPi_OLED_lib.h  bcm2835.h  i2c-dev.h
lib/lib-display/src/: Adafruit_GFX.cpp  ArduiPi_OLED.cpp  Wrapper.cpp  bcm2835.c
lib/lib-jsonrpc-tcp/: CMakeLists.txt
lib/lib-jsonrpc-tcp/include/: ADCmdlineHelper.hpp  ADCmnCltCmdProcessor.hpp  ADCmnDevTypes.h  ADCmnPortList.h  ADCmnStringProcessor.hpp  ADCommon.hpp  ADEvntMgr.hpp  ADEvntNotifier.hpp  ADFpgaMem.hpp  ADGenericChain.hpp  ADJsonChecker.hpp  ADJsonRpcClient.hpp  ADJsonRpcMapper.hpp  ADJsonRpcMgr.hpp  ADJsonRpcProxy.hpp  ADNetClient.hpp  ADNetServer.hpp  ADRuntimeMinCounter.hpp  ADSerial.hpp  ADSerialProto.hpp  ADSettings.hpp  ADSonOffHttpClient.hpp  ADSysInfo.hpp  ADTaskWorker.hpp  ADThread.hpp  ADThreadedSockClient.hpp  ADTimer.hpp  BitBang_I2C.h  DisplayDevice.hpp  I2CBusAccess.h  I2CDS3231.hpp  I2CDualPcfLcd.hpp  I2CGroveRgbLcd.hpp  I2CPcfLcd.hpp  I2CSsd1306.hpp  I2CTAOS3414Reg.h  I2CTAOS3414Sensor.hpp  JsonCmnDef.h  LightSensor.hpp  RTCDevice.hpp  (+2 more)
lib/lib-jsonrpc-tcp/src/: ADCmdlineHelper.cpp  ADCmnCltCmdProcessor.cpp  ADCmnStringProcessor.cpp  ADEvntMgr.cpp  ADEvntNotifier.cpp  ADFpgaMem.cpp  ADGenericChain.cpp  ADJsonChecker.cpp  ADJsonRpcClient.cpp  ADJsonRpcMapper.cpp  ADJsonRpcMgr.cpp  ADJsonRpcProxy.cpp  ADNetClient.cpp  ADNetServer.cpp  ADRuntimeMinCounter.cpp  ADSerial.cpp  ADSerialProto.cpp  ADSettings.cpp  ADSonOffHttpClient.cpp  ADSysInfo.cpp  ADTaskWorker.cpp  ADThread.cpp  ADThreadedSockClient.cpp  ADTimer.cpp  BitBang_I2C.cpp  DisplayDevice.cpp  I2CBusAccess.cpp  I2CDS3231.cpp  I2CDualPcfLcd.cpp  I2CGroveRgbLcd.cpp  I2CPcfLcd.cpp  I2CSsd1306.cpp  I2CTAOS3414Sensor.cpp  LightSensor.cpp  RTCDevice.cpp  ss_oled.cpp
lib/lib-settings/: CMakeLists.txt
lib/lib-settings/include/: settings.h  strmap.h
lib/lib-settings/src/: settings.cpp  strmap.cpp
services/: CMakeLists.txt
services/sysmgr/: CMakeLists.txt
services/sysmgr/clt/: CMakeLists.txt
services/sysmgr/clt/src/: SysmgrCltCmdline.cpp  SysmgrCltCmdline.h  main.cpp
services/sysmgr/include/: SysmgrJsonDef.h
services/sysmgr/srv/: CMakeLists.txt  SrcControlVersion.h.in
services/sysmgr/srv/src/: CmnRpc.cpp  CmnRpc.h  DevIdent.cpp  DevIdent.h  DevIdentA5V11.cpp  DevIdentA5V11.h  DevIdentGlMt300nv2.cpp  DevIdentGlMt300nv2.h  DevIdentNexx3020.cpp  DevIdentNexx3020.h  DevIdentRaspiAZero.cpp  DevIdentRaspiAZero.h  DispCtrlRpc.cpp  DispCtrlRpc.h  EventHandler.cpp  EventHandler.h  EventMonitor.cpp  EventMonitor.h  LogHandler.cpp  LogHandler.h  MyCmdline.cpp  MyCmdline.h  NetRpc.cpp  NetRpc.h  SysRpc.cpp  SysRpc.h  main.cpp
services/xmproxy/: CMakeLists.txt  README.md
services/xmproxy/clt/: CMakeLists.txt
services/xmproxy/clt/src/: XmproxyCltCmdline.cpp  XmproxyCltCmdline.h  main.cpp
services/xmproxy/helpers/: CMakeLists.txt  ssh-start.sh
services/xmproxy/helpers/configs/: xmpp-alias-list.txt
services/xmproxy/helpers/scripts/: ssh-running.sh  ssh-start.sh  ssh-stop.sh  ssh-tunnel-start.sh
services/xmproxy/include/: XmproxyJsonDef.h
services/xmproxy/srv/: CMakeLists.txt  xmpp-login.txt
services/xmproxy/srv/src/: ADXmppProxy.cpp  ADXmppProxy.hpp  CXmppProxy.cpp  CXmppProxy.hpp  EvntHandler.cpp  EvntHandler.h  MyCmdline.cpp  MyCmdline.h  XmppMgr.cpp  XmppMgr.h  XmppRpc.cpp  XmppRpc.h  main.cpp
utils/: CMakeLists.txt
utils/tcp-json-rpc-client/: CMakeLists.txt  readme.txt  tcp-json-rpc-client.cpp
utils/tcp-json-rpc-client/sysmgr-test/: requests.txt  responses.txt
utils/tcp-json-rpc-client/xmproxy-test/: requests.txt  responses.txt
utils/tests/: CMakeLists.txt  start-sysmgr.sh  stop-sysmgr.sh  stress-sysmgr.sh
utils/tests/scripts/: start-sysmgr.sh  start-xmproxysrv.sh  stop-xmproxysrv.sh  stress-xmproxysrv.sh
utils/tests/sysmgr-test/: requests.txt  responses.txt
utils/tests/xmproxy-test/: requests.txt  responses.txt
